# -Zlatopolsky

cmakeproject/: CMakeLists.txt
cmakeproject/example1/: CMakeLists.txt  example1.cpp
cmakeproject/example2/: CMakeLists.txt  example2.cpp
cmakeproject/example3/: CMakeLists.txt  example3.cpp
cmakeproject/example4/: CMakeLists.txt  example4.cpp
cmakeproject/example5/: CMakeLists.txt  example5.cpp
