# CMakeList.txt: проект CMake для example3; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#

# Добавьте источник в исполняемый файл этого проекта.
add_executable (example3 example3.cpp)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET example3 PROPERTY CXX_STANDARD 20)
endif()

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
