# CMakeList.txt: проект CMake для example5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#

# Добавьте источник в исполняемый файл этого проекта.
add_executable (example5 example5.cpp)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET example5 PROPERTY CXX_STANDARD 20)
endif()

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
